Add another temporary conflict