@@ -3,7 +3,6 @@ package com.adibarra.enchanttweaker;
 import org.objectweb.asm.tree.ClassNode;
 import org.spongepowered.asm.mixin.extensibility.IMixinConfigPlugin;
 import org.spongepowered.asm.mixin.extensibility.IMixinInfo;
-import org.spongepowered.include.com.google.common.collect.ImmutableMap;
 
 import java.util.List;
 import java.util.Map;
@@ -13,8 +12,9 @@ public final class ETMixinPlugin implements IMixinConfigPlugin {
 
     private static int num_mixins = 0;
 
-    private static final Map<String, ETUtils.Conflict> CONFLICTS = ImmutableMap.of(
-        "CrossbowInfinityFixMixin", new ETUtils.Conflict(() -> true, "WIP Beta")
+    private static final Map<String, ETUtils.Conflict> CONFLICTS = Map.of(
+        "CrossbowInfinityFixMixin", new ETUtils.Conflict(() -> true, "Early WIP, not ready for release."),
+        "ShinyNameMixin", new ETUtils.Conflict(() -> true, "Buggy, false positives for color highlighting.")
     );
 
     @Override
